Fix LDAP autocomplete to show display names (bug 79885) r=ducarroz@netscape.com, sr=mscott@netscape.com, a=dbaron@fas.harvard.edu